examples/test/testpolicy3019.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3019
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key8: value31
      key40: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value28
          key7: value47
          key4: value13
      podSelector:
        matchLabels:
          key31: value33
          key4: value23
          key23: value22
